# core

./: .gitignore  .travis.yml  .travis.ymlbk  CMakeLists.txt  README.md  c-cpp.yml
dep/src/g3dlite/: CMakeLists.txt
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: GridReference.h  TypeContainer.h  TypeContainerFunctions.h
src/framework/Network/: MangosSocketImpl.h
src/framework/Utilities/: Callback.h  EventProcessor.cpp  EventProcessor.h
src/game/: AccountMgr.cpp  AntiCheat.cpp  ArenaTeam.cpp  ArenaTeam.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h  CMakeLists.txt  Camera.cpp  Camera.h  CellImpl.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  CharmInfo.cpp  CharmInfo.h  Chat.cpp  Chat.h  ChatHandler.cpp  (+186 more)
src/game/AI/: CombatAI.h  CreatureAI.cpp  CreatureAI.h  CreatureAISelector.cpp  CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  PassiveAI.h  PetAI.h  ScriptedEscortAI.cpp  ScriptedFollowerAI.cpp  ScriptedInstance.h  TotemAI.cpp  UnitAI.cpp  UnitAI.h
src/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/game/Battlegrounds/: BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAV.cpp  BattleGroundBE.cpp  BattleGroundEY.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundRL.cpp  BattleGroundWS.cpp
src/game/Chat/: Channel.cpp  Chat.cpp  Chat.h
src/game/Commands/: Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp
src/game/Database/: DBCStores.cpp  DBCStores.h  Debugcmds.cpp
src/game/Group/: Group.cpp  Group.h  GroupReference.h
src/game/Guild/: Guild.cpp  GuildMgr.cpp  GuildMgr.h
src/game/Handlers/: AddonHandler.cpp  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  BattleGroundHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  CombatHandler.cpp  GMTicketHandler.cpp  GroupHandler.cpp  GuildHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  PetHandler.cpp  PetitionsHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  SkillHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TradeHandler.cpp
src/game/LuaEngine/: GlobalMethods.h  GroupMethods.h  HookMgr.cpp  HookMgr.h  ItemMethods.h  LuaEngine.cpp  LuaEngine.h  LuaFunctions.cpp  PlayerMethods.h  QueryMethods.h  UnitMethods.h
src/game/Maps/: CellImpl.h  GridDefines.h  GridMap.cpp  GridMap.h  GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h  GridStates.h  InstanceData.cpp  InstanceData.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  MapReference.h  MoveMap.cpp  MoveMap.h  MoveMapSharedDefines.h  PathFinder.cpp  PathFinder.h  ZoneScript.h
src/game/Movement/: ConfusedMovementGenerator.cpp  ConfusedMovementGenerator.h  FleeingMovementGenerator.cpp  FollowerReference.h  HomeMovementGenerator.cpp  HomeMovementGenerator.h  IdleMovementGenerator.h  MotionMaster.cpp  MotionMaster.h  MovementGenerator.h  PointMovementGenerator.cpp  PointMovementGenerator.h  RandomMovementGenerator.cpp  RandomMovementGenerator.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointMgr.cpp  WaypointMgr.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h
src/game/Objects/: Bag.cpp  Bag.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  DynamicObject.cpp  GameObject.cpp  GameObject.h  Item.cpp  Item.h  Object.cpp  Object.h  Pet.cpp  Pet.h  Player.cpp  Player.h  TemporarySummon.cpp  Totem.cpp  Unit.cpp  Unit.h  UpdateData.cpp
src/game/OutdoorPvP/: OutdoorPvP.cpp  OutdoorPvPEP.cpp  OutdoorPvPHP.cpp  OutdoorPvPMgr.cpp  OutdoorPvPNA.cpp  OutdoorPvPSI.cpp  OutdoorPvPTF.cpp  OutdoorPvPZM.cpp
src/game/Protocol/: WorldSocket.cpp
src/game/Spells/: Spell.cpp  Spell.h  SpellAuras.cpp  SpellAuras.h  SpellEffects.cpp  SpellMgr.cpp  SpellMgr.h
src/game/Threat/: ThreatManager.h
src/game/Transports/: Transports.cpp
src/game/luaengine/: GlobalMethods.h  LuaEngine.h  UnitMethods.h  WorldObjectMethods.h
src/game/luaengine1/: AuraMethods.h  CorpseMethods.h  CreatureMethods.h  GameObjectMethods.h  GuildMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  WorldObjectMethods.h
src/game/movemap/: MoveMap.h  PathFinder.cpp  PathFinder.h
src/game/movement/: ConfusedMovementGenerator.h  HomeMovementGenerator.cpp  MotionMaster.cpp  MoveSplineInit.cpp  MoveSplineInit.h  PointMovementGenerator.cpp  RandomMovementGenerator.cpp  TargetedMovementGenerator.h
src/game/vmap/: DynamicTree.cpp  IVMapManager.h  MapTree.cpp  MapTree.h  ModelInstance.cpp  ModelInstance.h  PipeWrapper.cpp  RegularGrid.h  VMapCluster.cpp  VMapCluster.h  VMapDefinitions.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h  WorldModel.cpp  WorldModel.h
src/hellgroundcore/: CMakeLists.txt  Master.cpp  WorldRunnable.cpp  hellgroundcore.conf.dist
src/hellgroundrealm/: AuthSocket.cpp  AuthSocket.h  CMakeLists.txt  Main.cpp  RealmList.cpp
src/mangosd/: CMakeLists.txt  ChatSocket.cpp  CliRunnable.cpp  MaNGOSsoap.cpp  Main.cpp  Master.cpp  RASocket.cpp  RASocket.h  WorldRunnable.cpp  mangosd.conf.dist  mangosd.conf.dist.in
src/realmd/: AuthSocket.cpp  CMakeLists.txt  Main.cpp  PatchHandler.h  RealmList.cpp  realmd.conf.dist.in
src/scripts/: CMakeLists.txt  ScriptMgr.cpp  ScriptMgr.h
src/scripts/boss/: boss_emeriss.cpp  boss_hogger.cpp  boss_lethon.cpp  boss_taerar.cpp  boss_ysondre.cpp
src/scripts/include/: ScriptedEscortAI.h  ScriptedPch.h  escort_ai.cpp  (+6 more)
src/shared/: ByteBuffer.h  CMakeLists.txt  Common.h  Log.cpp  Log.h  PosixDaemon.cpp  PosixDaemon.h  ProgressBar.cpp  ServiceWin32.cpp  SystemConfig.h  Threading.cpp  Timer.h  Util.cpp  Util.h
(+1849 files in other folders)
